--- a/AppTFG/app/src/main/res/values/styles.xml
+++ b/AppTFG/app/src/main/res/values/styles.xml
@@ -2,6 +2,9 @@
 <resources>
     <style name="Widget.App.Button.IconOnly" parent="Widget.MaterialComponents.Button">
         <item name="iconPadding">0dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textAlignment">center</item>
+        <item name="iconGravity">textStart</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:paddingLeft">10dp</item>
@@ -18,6 +21,7 @@
         <item name="android:layout_height">70dp</item>
         <item name="android:backgroundTint">@color/turquesa</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:clickable">true</item>
         <item name="cornerRadius">25dp</item>
         <item name="android:padding">10dp</item>
         <item name="android:layout_gravity">center</item>
