--- a/AppTFG/app/src/main/res/layout/activity_detalle.xml
+++ b/AppTFG/app/src/main/res/layout/activity_detalle.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RegistrarFarmaco"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/detalle_farmaco_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo"
-    android:useDefaultMargins="true">
+    android:useDefaultMargins="true"
+    tools:context=".RegistrarFarmaco">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_detalle_farmaco"
@@ -15,10 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         app:layout_constrainedHeight="true"
-
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/guideline1">
 
         <ScrollView
