--- a/AppTFG/app/src/main/res/layout/fragment_step_receta.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_step_receta.xml
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contenedor_lista"
+            android:id="@+id/rv_recetas"
             android:paddingEnd="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
