--- a/AppTFG/app/src/main/res/layout/activity_detalle.xml
+++ b/AppTFG/app/src/main/res/layout/activity_detalle.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo"
-    android:useDefaultMargins="true"
     tools:context=".RegistrarFarmaco">
 
     <androidx.cardview.widget.CardView
@@ -34,10 +33,73 @@
                 <TextView
                     android:id="@+id/editar_farmaco_title"
                     style="@style/Titulo"
-                    android:text="Nombre fármaco"/>
+                    android:text="@string/nombre_farmaco" />
 
-                <include android:id="@+id/editar_formulario"
-                    layout="@layout/formulario_farmaco"/>
+                <GridLayout
+                    android:id="@+id/form_add_farmaco"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        style="@style/Subtitulo"
+                        android:layout_row="2"
+                        android:layout_column="0"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="8dp"
+                        android:labelFor="@+id/sr_lista_pre"
+                        android:text="@string/presentacion_comercial"/>
+
+                    <androidx.core.widget.NestedScrollView
+                        android:id="@+id/sr_lista_pre"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_row="3"
+                        android:layout_column="0"
+                        android:background="@drawable/round_box"
+                        android:backgroundTint="@color/white"
+                        android:fadeScrollbars="false"
+                        android:minHeight="70dp"
+                        android:orientation="vertical"
+                        android:scrollbarAlwaysDrawVerticalTrack="true"
+                        android:scrollbarFadeDuration="50000"
+                        android:scrollbarSize="8dp"
+                        android:scrollbarStyle="outsideInset"
+                        android:scrollbarThumbVertical="@color/gris_claro"
+                        android:scrollbars="vertical">
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_presentaciones"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"/>
+                    </androidx.core.widget.NestedScrollView>
+
+                    <TextView
+                        style="@style/Subtitulo"
+                        android:layout_row="5"
+                        android:layout_column="0"
+                        android:layout_marginTop="30dp"
+                        android:labelFor="@+id/til_valor_dosis"
+                        android:text="@string/dosis_maxima" />
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_row="6"
+                        android:layout_column="0"
+                        android:layout_margin="25dp">
+                        <include
+                            android:id="@+id/ly_dosis"
+                            layout="@layout/box_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_row="6"
+                            android:layout_column="0"
+                            android:layout_alignParentStart="true"/>
+                    </LinearLayout>
+                </GridLayout>
 
                 <LinearLayout
                     android:id="@+id/ly_edit_delete"
@@ -65,9 +127,9 @@
                         style="@style/Widget.App.Button.IconOnly"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
                         android:backgroundTint="@color/purple_200"
                         android:elevation="40dp"
-                        android:layout_marginStart="8dp"
                         android:padding="20dp"
                         android:textSize="18sp"
                         app:cornerRadius="20dp"
@@ -81,13 +143,13 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:src="@drawable/ic_signup"
         android:contentDescription="@string/descripcion_personal_img"
+        android:src="@drawable/ic_signup"
         app:layout_constrainedHeight="true"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -102,7 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"/>
+        app:layout_constraintGuide_percent="0.8" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
