--- a/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
@@ -7,15 +7,11 @@
 
     <TextView
         android:id="@+id/tx_tit_nombre"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Subtitulo"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_marginTop="15dp"
         android:labelFor="@+id/til_add_farmaco_name"
-        android:text="Nombre:"
-        android:textColor="@color/gris"
-        android:textSize="15sp" />
+        android:text="Nombre:"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_add_farmaco_name"
@@ -42,16 +38,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Subtitulo"
         android:layout_row="2"
         android:layout_column="0"
-        android:layout_marginTop="15dp"
         android:layout_marginBottom="8dp"
         android:labelFor="@+id/sr_lista_pre"
-        android:text="Presentación comercial:"
-        android:textColor="@color/gris"
-        android:textSize="15sp" />
+        android:text="Presentación comercial:"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/sr_lista_pre"
@@ -91,16 +83,11 @@
         app:iconTint="@color/white" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Subtitulo"
         android:layout_row="5"
         android:layout_column="0"
-        android:layout_marginTop="15dp"
         android:labelFor="@+id/til_valor_dosis"
-        android:text="Dosis máxima:"
-        android:textColor="@color/gris"
-        android:textSize="15sp" />
-
+        android:text="Dosis máxima:"/>
     <include
         layout="@layout/dosis_maxima"
         android:layout_width="wrap_content"
