--- a/AppTFG/app/src/main/res/layout/receta_item.xml
+++ b/AppTFG/app/src/main/res/layout/receta_item.xml
@@ -9,46 +9,44 @@
     android:background="@color/white">
 
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_row="1"
-        android:layout_column="0"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_nombre_receta"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginStart="20dp"
-            android:text="Fármaco"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/flecha"
-            android:layout_width="102dp"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:src="@drawable/ic_flecha">
-
-        </ImageView>
+        android:layout_gravity="start"
+        android:orientation="horizontal"
+        android:rowCount="3">
 
         <TextView
             android:id="@+id/tv_carga"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:textAlignment="textEnd"
+            android:layout_marginEnd="15dp"
+            android:layout_gravity="end"
+            android:text="20 mL"
+            android:textSize="20sp"></TextView>
+
+        <TextView
+            android:id="@+id/tv_nombre_receta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:text="20 mL"
-            android:textSize="30sp"></TextView>
+            android:layout_marginStart="20dp"
+            android:text="Fármaco"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    </GridLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/flecha"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:src="@drawable/ic_flecha"></ImageView>-->
+
+
+    </LinearLayout>
 
     <View
         android:id="@+id/tit_separator2"
