--- a/AppTFG/app/src/main/res/layout/fragment_dosimetro.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_dosimetro.xml
@@ -2,21 +2,283 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_fragment_dosimetro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#16BB86FC"
     tools:context=".ui.dosimetro.DosimetroFragment">
 
-    <TextView
-        android:id="@+id/text_dosimetro"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_dosimetro"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbarFadeDuration="50000"
+        android:scrollbarSize="5dp"
+        android:scrollbarThumbVertical="@color/azul_electrico"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        app:elevation="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/ly_botones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ly_botones"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintWidth_percent="0.8">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tit_fd_dosimetro"
+                style="@style/Titulo"
+                android:textSize="30dp"
+                android:layout_width="wrap_content"
+                android:text="Fármaco dominante:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.554"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_nombre_fd_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:text="Nombre:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tit_fd_dosimetro"
+                app:layout_constraintWidth_percent="0.5" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_nombre_fd_dosimetro"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_marginStart="10dp"
+                android:completionHint="Seleccione fármaco"
+                android:dropDownSelector="@color/turquesa"
+                android:inputType="text"
+                android:scrollbarAlwaysDrawHorizontalTrack="true"
+                android:textColorHint="@color/azul_electrico"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_fd_dosimetro"
+                app:layout_constraintWidth_percent="0.5"
+                app:startIconDrawable="@drawable/ic_text"
+                tools:ignore="KeyboardInaccessibleWidget">
+
+                <AutoCompleteTextView
+                    android:id="@+id/ac_nombre_fd_dosimetro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"></AutoCompleteTextView>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/tv_dosis_actual_fd_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:labelFor="@+id/til_presentacion_fd"
+                android:text="Dosis actual:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/til_nombre_fd_dosimetro" />
+
+            <include
+                android:id="@+id/ly_dosis_actual_fd_dosimetro"
+                layout="@layout/dosis_maxima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_dosis_actual_fd_dosimetro" />
+
+            <TextView
+                android:id="@+id/tv_dosis_nueva_fd_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:labelFor="@+id/til_presentacion_fs"
+                android:text="Nueva dosis:"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ly_dosis_actual_fd_dosimetro" />
+
+            <include
+                android:id="@+id/ly_dosis_nueva_fd_dosimetro"
+                layout="@layout/dosis_maxima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_dosis_nueva_fd_dosimetro" />
+
+            <TextView
+                android:id="@+id/tit_fs_dosimetro"
+                style="@style/Titulo"
+                android:textSize="30dp"
+                android:layout_marginTop="20dp"
+                android:text="Fármaco secundario:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ly_dosis_nueva_fd_dosimetro" />
+
+            <TextView
+                android:id="@+id/tv_nombre_fs_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:text="Nombre:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tit_fs_dosimetro" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_nombre_fs_dosimetro"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:completionHint="Seleccione fármaco"
+                android:dropDownSelector="@color/turquesa"
+                android:inputType="text"
+                android:scrollbarAlwaysDrawHorizontalTrack="true"
+                android:textColorHint="@color/azul_electrico"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_fs_dosimetro"
+                app:startIconDrawable="@drawable/ic_text"
+                tools:ignore="KeyboardInaccessibleWidget">
+
+                <AutoCompleteTextView
+                    android:id="@+id/ac_nombre_fs_dosimetro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"></AutoCompleteTextView>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/tv_dosis_actual_fs_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:labelFor="@+id/til_presentacion_fs"
+                android:text="Dosis actual:"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/til_nombre_fs_dosimetro" />
+
+            <include
+                android:id="@+id/ly_dosis_actual_fs_dosimetro"
+                layout="@layout/dosis_maxima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_dosis_actual_fs_dosimetro" />
+
+            <TextView
+                android:id="@+id/tv_dosis_nueva_fs_dosimetro"
+                style="@style/Subtitulo"
+                android:layout_marginStart="10dp"
+                android:labelFor="@+id/til_presentacion_fs"
+                android:text="Nueva dosis:"
+                android:textColor="@color/purple_200"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ly_dosis_actual_fs_dosimetro" />
+
+            <include
+                android:id="@+id/ly_dosis_nueva_fs_dosimetro"
+                layout="@layout/dosis_maxima"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_dosis_nueva_fs_dosimetro" />
+
+            <!--            <com.google.android.material.button.MaterialButton-->
+            <!--                android:id="@+id/bt_resetear_dosimetro"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:backgroundTint="@color/rojo"-->
+            <!--                android:padding="8dp"-->
+            <!--                android:text="resetear"-->
+            <!--                app:cornerRadius="10dp"-->
+            <!--                app:icon="@drawable/ic_borrar"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/ly_dosis_nueva_fs_dosimetro" />-->
+
+            <!--            <com.google.android.material.button.MaterialButton-->
+            <!--                android:id="@+id/bt_calcular_nueva_dosis"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginEnd="284dp"-->
+            <!--                android:backgroundTint="@color/amarillo"-->
+            <!--                android:padding="8dp"-->
+            <!--                android:text="calcular nueva dosis"-->
+            <!--                app:cornerRadius="10dp"-->
+            <!--                app:icon="@drawable/ic_calculadora"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/bt_resetear_dosimetro"-->
+            <!--                app:layout_constraintVertical_bias="0.125" />-->
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/ly_botones"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_resetear_dosimetro"
+            style="@style/Widget.App.Button.IconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:backgroundTint="@color/rojo"
+            android:padding="8dp"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/ic_borrar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_dosimetro"></com.google.android.material.button.MaterialButton>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_calcular_nueva_dosis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:backgroundTint="@color/turquesa"
+            android:padding="8dp"
+            android:text="nueva dosis"
+            android:textSize="20dp"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/ic_calculadora"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_dosimetro"></com.google.android.material.button.MaterialButton>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
