--- a/AppTFG/app/src/main/res/layout/bottom_sheet_farmaco_secundario_form.xml
+++ b/AppTFG/app/src/main/res/layout/bottom_sheet_farmaco_secundario_form.xml
@@ -113,7 +113,7 @@
     <include
         android:id="@+id/ly_dosis"
         layout="@layout/dosis_maxima"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
