--- a/AppTFG/app/src/main/res/layout/fragment_step_farmacos_secundarios.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_step_farmacos_secundarios.xml
@@ -22,7 +22,7 @@
         android:elevation="10dp"
         android:text="Fármacos secundarios:"
         android:textAlignment="center"
-        android:textSize="40sp"
+        style="@style/Titulo2"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,6 @@
         android:src="@drawable/ic_receta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.59" />
+        app:layout_constraintGuide_percent="0.68" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
