--- a/AppTFG/app/src/main/res/layout/fragment_step_volumen.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_step_volumen.xml
@@ -17,8 +17,8 @@
         android:layout_marginTop="520dp"
         android:text="Volumen de la bomba:"
         android:textAlignment="center"
-        android:textSize="40sp"
         android:textStyle="bold"
+        style="@style/Titulo2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
