--- a/AppTFG/app/src/main/res/layout/activity_detalle.xml
+++ b/AppTFG/app/src/main/res/layout/activity_detalle.xml
@@ -128,7 +128,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:backgroundTint="@color/purple_200"
+                        android:backgroundTint="@color/turquesa"
                         android:elevation="40dp"
                         android:padding="20dp"
                         android:textSize="18sp"
