--- a/AppTFG/app/src/main/res/layout/dosis_maxima.xml
+++ b/AppTFG/app/src/main/res/layout/dosis_maxima.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ly_dosis"
     android:orientation="horizontal"
     android:layout_marginTop="3dp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_valor_dosis"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.5"
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
-        app:startIconDrawable="@drawable/ic_number"
         app:endIconDrawable="@drawable/ic_borrar"
-        app:endIconMode="clear_text">
+        app:endIconMode="clear_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:startIconDrawable="@drawable/ic_number">
 
         <EditText
             android:id="@+id/et_valor_dosis"
@@ -29,20 +33,26 @@
             android:layout_marginEnd="5dp"
             android:imeOptions="actionNext"
             android:inputType="numberDecimal"
-            android:textColor="@color/gris"
             android:paddingHorizontal="5dp"
+            android:textColor="@color/gris"
             android:textSize="14sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_unidad_dosis"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="1"
+        android:layout_gravity="center_vertical"
+        app:layout_constraintWidth_percent="0.5"
         android:hint="@string/unidad"
-        android:layout_gravity="center_vertical">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/til_valor_dosis"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/sp_unidad_dosis"
@@ -53,8 +63,7 @@
             android:dropDownSelector="@color/turquesa"
             android:entries="@array/unidades_dosis"
             android:inputType="none"
-            android:scrollbarAlwaysDrawHorizontalTrack="true"
-            />
+            android:scrollbarAlwaysDrawHorizontalTrack="true" />
     </com.google.android.material.textfield.TextInputLayout>
-</GridLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
