--- a/AppTFG/app/src/main/res/layout/farmaco_secundario_item.xml
+++ b/AppTFG/app/src/main/res/layout/farmaco_secundario_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fs_item"
     android:background="@color/white"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,19 +12,18 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_margin="8dp"
+        android:layout_margin="5dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_nombre_fs"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_row="0"
             android:layout_column="0"
+            android:layout_gravity="center"
             android:text="Morfina"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginStart="20dp"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -44,10 +44,8 @@
         <View
             android:id="@+id/tit_separator2"
             android:layout_width="match_parent"
-            android:layout_row="3"
-            android:layout_column="0"
             android:layout_height="2dp"
             android:layout_marginBottom="1dp"
             android:background="@color/azul_electrico"></View>
 
-</GridLayout>
+</LinearLayout>
