--- a/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
@@ -90,7 +90,7 @@
         android:text="Dosis máxima:"/>
     <include
         layout="@layout/dosis_maxima"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_row="6"
         android:layout_column="0"
