--- a/AppTFG/app/src/main/res/layout/activity_login.xml
+++ b/AppTFG/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_login_email"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    style="@style/TextInputLayout.EditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
@@ -60,7 +60,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_login_password"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    style="@style/TextInputLayout.EditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_row="2"
