--- a/AppTFG/app/src/main/res/layout/concentracion.xml
+++ b/AppTFG/app/src/main/res/layout/concentracion.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_valor_concentracion"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/TextInputLayout.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_row="0"
