--- a/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/formulario_farmaco.xml
@@ -15,7 +15,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_add_farmaco_name"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/TextInputLayout.EditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_row="1"
