--- a/AppTFG/app/src/main/res/layout/presentacion_comercial.xml
+++ b/AppTFG/app/src/main/res/layout/presentacion_comercial.xml
@@ -8,7 +8,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_valor_pre"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/TextInputLayout.EditText"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_row="0"
