--- a/AppTFG/app/src/main/res/values/styles.xml
+++ b/AppTFG/app/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
         <item name="android:scrollbarAlwaysDrawHorizontalTrack">true</item>
     </style>
 
+    <!--    Títulos-->
     <style name="Titulo">
         <item name="android:textSize">40sp</item>
         <item name="android:textStyle">bold</item>
@@ -69,6 +70,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAlignment">textStart</item>
         <item name="android:layout_marginTop">15dp</item>
+
+    </style>
+
+    <!--    TextInputLayout-->
+    <style name="TextInputLayout.EditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeErrorColor">@color/rojo</item>
+        <item name="errorTextColor">@color/rojo</item>
+        <item name="errorEnabled">true</item>
+        <item name="endIconMode">clear_text</item>
 
     </style>
 </resources>
