--- a/AppTFG/app/src/main/res/layout/fragment_mezclas.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_mezclas.xml
@@ -10,45 +10,34 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_signup"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="80dp"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbarFadeDuration="50000"
-        android:scrollbarSize="4dp"
-        android:scrollbarThumbVertical="@color/azul_electrico"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        app:elevation="50dp"
+        style="@style/CardView.PantallaCompleta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bt_stepper">
+        <ScrollView
+            android:id="@+id/scroll_fragmento"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <FrameLayout
             android:id="@+id/contenedor_fragmentos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/bt_stepper"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></FrameLayout>
+            android:layout_margin="20dp"></FrameLayout>
 
+        </ScrollView>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:id="@+id/bt_stepper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_signup"
-        tools:layout_editor_absoluteX="10dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/step1"
