--- a/AppTFG/app/src/main/res/layout/fragment_step_farmacos_secundarios.xml
+++ b/AppTFG/app/src/main/res/layout/fragment_step_farmacos_secundarios.xml
@@ -49,6 +49,7 @@
         android:id="@+id/sc_contenedor_lista"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         android:layout_margin="15dp"
         android:fadeScrollbars="false"
         android:scrollbarAlwaysDrawVerticalTrack="true"
@@ -79,6 +80,7 @@
         android:src="@drawable/ic_receta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
